API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes

18-Jun-2003	Troy A. Griffitts <scribe@crosswire.org>
	Joachim added OSISFootnotes.  Added entryAttributes
		parsing in OSISFootnotes
	Added = operator and empty constructor to XMLTag
	Fixed OSISHeadings to passthru non x-preverse note
		bodies

10-Jun-2003	Troy A. Griffitts <scribe@crosswire.org>
	Added tests/testsuite for building a good set
		of regression tests
	Fixed VerseKey parsing of "1. book" and osisRefs

06-Jun-2003     Joachim Ansorg <junkmail@joachim.ansorgs.de>
	Implemented encodeURL() function in utilweb.cpp
	Converted ThMLHTML filter to XMLTag, removed handling
		of scripRefs because this shouldn't be done
		in FMT_HTML
	Converted ThMLHTMLHREF to XMLTag. Fixed some things.
	Simplified some small things in filters, nothing big.

01-Jun-2003     Joachim Ansorg <junkmail@joachim.ansorgs.de>
	Added WEBIF filters, based on HTMLHREF filters.
	Added new utilweb stuff for working with urls etc.
	Fixed SWORD_NAMESPACE_START and SWORD_NAMESPACE_END
		in defs.h if NO_SWORD_NAMESPACE was defined

30-May-2003	Troy A. Griffitts <scribe@crosswire.org>
	Added utilities/installmgr to call some of the
		basic functionality from engine install
		routines.
	Added removeModule to installmgr.cpp, copied from
		Windows InstallMgr.

26-May-2003	Troy A. Griffitts <scribe@crosswire.org>
	Added first cut of osis2mod using the ESV as a
		basic template.  Works with VerseKey mods
		only and doesn't capture all data.
	Improved verse reference parsing to include proper
		parsing of osisRef attributes and other
		misc. anomalies.
	Returned canon.h back to previous state to
		avoid locale key mismatches

25-May-2003	Troy A. Griffitts <scribe@crosswire.org>
	Added utilfuns/utilxml.cpp and test/xmltest which
		include basic xml utility classes
	Added comparison operators to SWBuf so it plays
		nicely with stl containers

19-Feb-2003	Troy A. Griffitts <scribe@crosswire.org>