@@ -1,6 +1,7 @@
 // Include only if your UNIX compiler does not include stricmp but does include strcasecmp
 
 #include <unixstr.h>
+#include <string.h>
 
 SWORD_NAMESPACE_START
 int stricmp(const char *s1, const char *s2) {
